# iDrop

./: .gitignore  Cargo.toml  LICENSE  README.md  build-bak.rs  create_model.py  libpython3.9.dylib  requirements.txt
assets/data/: 100.csv  190.csv  275.csv
assets/models/trained_models/model_secondnumberdevice1/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/model_secondnumberdevice1/variables/: variables.data-00000-of-00001  variables.index
assets/models/trained_models/model_secondnumberdevice2/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/model_secondnumberdevice3/: saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHFREQDEVICEONE/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHFREQDEVICETHREE/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHFREQPREDICT_part2/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHOUTFREQDEVICEONE/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHOUTFREQDEVICETHREE/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTFINALWITHOUTFREQ_part1/: keras_metadata.pb  saved_model.pb
assets/models/trained_models/newermodelrr170510256WITHDROPOUT0.3MOSTRECENT/: keras_metadata.pb  saved_model.pb
src/: create_model.py  graphics.rs  lib.rs  main.rs
src/lib/: app.rs  colors.rs  ml.rs  mod.rs  prediction.rs  styling.rs
src/lib/views/: mod.rs  prediction_ui.rs  training_ui.rs
src/scenes/: mod.rs  prediction_ui.rs  training_ui.rs
src/styling/: mod.rs  palette.rs
(+18 files in other folders)
