[package]
name = "drop-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.8"
tensorflow = "0.18.0" # Rust language bindings for TensorFlow.
ndarray = "0.15.4"    # An n-dimensional array for general elements and for numerics. 
csv = "1.1.6"         # Fast CSV parsing with support for serde.
native-dialog = "0.6.3"

[dependencies.iced]
features = ["image", "debug", "pure", "canvas", "debug", "palette"]
version = "0.4.2"
